<resources>
    <string name="app_name">Quiz App</string>
    <string name="quiz_app">Quiz App!</string>
    <string name="welcome">Welcome</string>
    <string name="please_enter_your_name">Please Enter Your Name</string>
    <string name="name">Name</string>
    <string name="start">Start</string>
    <string name="quiz_image">Quiz Image</string>
    <string name="submit">Submit</string>
    <string name="result">Result</string>
    <string name="medalreceived">medalReceived</string>
    <string name="congratulations">Congratulations</string>
    <string name="finish">Finish</string>
    <string name="play_again">Play again</string>
</resources>