<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/ic_bg">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:fontFamily="cursive"
        android:gravity="center"
        android:text="@string/quiz_app"
        android:textColor="#071157"
        android:textSize="40sp"
        android:textStyle="bold"
        tools:ignore="TextContrastCheck">
    </TextView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16sp"
        android:layout_gravity="center"
        app:cardCornerRadius="36dp"
        app:cardElevation="16dp"
        app:cardPreventCornerOverlap="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@color/bg_2">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/welcome"
                android:textColor="#F1F8E9"
                android:textSize="35sp"
                android:textStyle="bold"
                android:fontFamily="casual">
            </TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/please_enter_your_name"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold">
            </TextView>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tIName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginHorizontal="16dp"
                android:layout_gravity="center"
                android:hint="@string/name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:textColorHint="#292C30"
                app:errorEnabled="true"
                app:errorTextColor="#FF0000"
                app:errorIconDrawable="@drawable/ic_error"
                android:layout_marginBottom="16dp"
                app:startIconDrawable="@drawable/ic_person">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/eTName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords"
                    android:text=""
                    android:textColor="@color/white"
                    android:textSize="22sp"
                    tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck">
                </androidx.appcompat.widget.AppCompatEditText>

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnStart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="48dp"
                android:layout_marginBottom="16dp"
                android:backgroundTint="@color/bg_3"
                android:text="@string/start"
                android:textColor="#000000"
                android:textSize="30sp">
            </Button>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>
