<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultActivity"
    android:background="@drawable/ic_bg"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:fontFamily="cursive"
        android:gravity="center"
        android:text="@string/result"
        android:textColor="#071157"
        android:textSize="40sp"
        android:textStyle="bold"
        tools:ignore="TextContrastCheck">
    </TextView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16sp"
        android:layout_gravity="center"
        app:cardCornerRadius="36dp"
        app:cardElevation="16dp"
        app:cardPreventCornerOverlap="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@color/bg_2">

            <ImageView
                android:id="@+id/medalImage"
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                tools:src="@drawable/ic_goldmedal"
                android:contentDescription="@string/medalreceived">
            </ImageView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/congratulations"
                android:gravity="center"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="25sp">
            </TextView>

            <TextView
                android:id="@+id/tvUsername"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold"
                tools:text="Aditya jha">
            </TextView>

            <TextView
                android:id="@+id/tvScore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="8dp"
                tools:text="Your score is 30 out of 30"
                android:textStyle="bold"
                android:textColor="#E8DBDB"
                android:textSize="20sp">
            </TextView>

            <Button
                android:id="@+id/btnFinish"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginHorizontal="48dp"
                android:layout_marginBottom="16dp"
                android:backgroundTint="@color/bg_3"
                android:text="@string/play_again"
                android:textColor="#000000"
                android:textSize="30sp">
            </Button>

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>